# claude-pr-reviewer

./: .gitignore  CLAUDE.md  PROJECT.md  README.md  action.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/ai_pr_reviewer/: __init__.py  __main__.py  bitbucket_client.py  claude_client.py  config.py  context_finder.py  diff_parser.py  github_client.py  gitlab_client.py  metrics.py  review_engine.py  vcs_provider.py
tests/: test_bitbucket_client.py  test_claude_client.py  test_config.py  test_context_finder.py  test_diff_parser.py  test_github_client.py  test_gitlab_client.py  test_main.py  test_metrics.py  test_review_engine.py  test_vcs_provider.py
