[project]
name = "ai-pr-reviewer"
version = "1.0.0"
description = "AI-powered pull/merge request reviewer using the Claude API (GitHub Actions, GitLab CI, or Bitbucket Pipelines)"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.111.0",
    "requests==2.34.2",
]

[project.scripts]
ai-pr-reviewer = "ai_pr_reviewer.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "responses>=0.25.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/ai_pr_reviewer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
